# NepaNova

./: .dockerignore  .gitignore  README.md  docker-compose.yml  report.md
app/: .gitignore  (+7 more)
server/: .gitignore  Dockerfile  db.sqlite3  pyproject.toml  requirements.txt
server/account/: admin.py  apps.py  models.py  rbac.py  seed.py  serializers.py  urls.py  utils.py  views.py
server/account/migrations/: 0001_initial.py  0002_emailoutbox.py  0002_remove_siteviewlog_enclg_remove_siteviewlog_encsh_and_more.py  0003_remove_deliveryaddress_unique_default_address_per_user.py  0003_user_phone_phoneloginotp.py  0004_alter_user_state.py
server/account/templates/: newsletter_welcome.html  password_changed.html  reset_password.html  welcome.html
server/booking/: admin.py  models.py  serializers.py  urls.py  views.py
server/booking/migrations/: 0001_initial.py  0002_remove_booking_notes_booking_admin_message_and_more.py  0003_alter_booking_measurement_type.py  0004_booking_bill_data.py
server/booking/templates/: bill_email.html  booking_confirmation.html  measurement_complete.html
server/layout/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
server/layout/migrations/: 0001_initial.py
server/product/: models.py  serializers.py  urls.py  utils.py  views.py
server/product/migrations/: 0001_initial.py  0002_remove_productvariant_unique_product_size_when_color_null_and_more.py  (+3 more)
server/sales/: admin.py  dashboard_views.py  models.py  serializers.py  urls.py  views.py
server/server/: settings.py  urls.py  views.py
server/templates/: 404.html
(+257 files in other folders)
