[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.11.1",
    "certifi>=2026.5.20",
    "charset-normalizer>=3.4.7",
    "cryptography>=48.0.0",
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=23.0.0",
    "idna>=3.16",
    "pillow>=12.2.0",
    "pyjwt>=2.13.0",
    "pymysql>=1.2.0",
    "python-decouple>=3.8",
    "requests>=2.34.2",
    "resend>=2.30.1",
    "sqlparse>=0.5.5",
    "stripe>=15.1.0",
    "typing-extensions>=4.15.0",
    "tzdata>=2026.2",
    "urllib3>=2.7.0",
]
